--- a/src/UdemyFreeCoursesBot.Func/UdemyFreeCoursesBot.Func.csproj
+++ b/src/UdemyFreeCoursesBot.Func/UdemyFreeCoursesBot.Func.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.16.1" />
     <PackageReference Include="Azure.Data.Tables" Version="12.2.0" />
+    <PackageReference Include="FaunaDB.Client" Version="4.1.0" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Http" Version="3.0.13" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Timer" Version="4.0.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Sdk" Version="1.0.4" OutputItemType="Analyzer" />
