--- a/.github/workflows/udemyfreecoursesbot.yml
+++ b/.github/workflows/udemyfreecoursesbot.yml
@@ -8,7 +8,7 @@ env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: UdemyFreeCoursesBot.Func/publish
   CONFIGURATION: Release
   DOTNET_CORE_VERSION: 5.0.x
-  WORKING_DIRECTORY: UdemyFreeCoursesBot.Func
+  WORKING_DIRECTORY: /src/UdemyFreeCoursesBot.Func
   DOTNET_CORE_VERSION_INPROC: 3.1.x
 jobs:
   build-and-deploy:
